<resources>
    <string name="app_name">AppPoint</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="button1">Button</string>
    <string name="textview"> </string>
    <string name="button2">Button</string>
    <string name="textview2">TextView</string>
    <string name="todo1">TODO</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="textview4">TextView</string>
    <string name="content"></string>
    <string name="type_your_post">Type your post ...</string>
    <string name="post">Post</string>
    <string name="advertising">Advertising</string>
    <string name="age_from">Age From :</string>
    <string name="to">To :</string>
    <string name="target_type">Target Type :</string>
    <string name="children">Children</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="product_type">Product Type :</string>
    <string name="price">Price :</string>
    <string name="price_in_egyptian_pound">Price in Egyptian Pound</string>
    <string name="passwod">Passwod</string>
    <string name="login">Login</string>
    <string name="apppoint">AppPoint</string>
    <string name="username">Username</string>
    <string name="registration">Registration.</string>
    <string name="todo">TODO</string>

    <string-array name="names">
        <item>Choose</item>
        <item>Foodstuffs</item>
        <item>Electronics</item>
        <item>Clothes</item>
        <item>Other</item>
    </string-array>
    <string-array name="Range">
        <item>Choose</item>
        <item>1 KM</item>
        <item>2 KM</item>
        <item>3 KM</item>
        <item>4 KM</item>
        <item>5 KM</item>
    </string-array>
    <string-array name="Fonts">
        <item>sans-serif</item>
        <item>sans-serif-condensed</item>
        <item>serif</item>
        <item>monospace</item>
        <item>serif-monospace</item>
        <item>casual</item>
        <item>cursive</item>
        <item>sans-serif-smallcaps</item>
    </string-array>
    <string-array name="FontsSize">
        <item>Tiny</item>
        <item>Small</item>
        <item>Normal</item>
    </string-array>
    <string-array name="Reason">
        <item>your Reason</item>
        <item> A waste of time </item>
        <item>I do not find it useful</item>
        <item>It does not have many features</item>
        <item>maybe later</item>
        <item>other</item>
    </string-array>


</resources>
