<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.project.geo.finalproject.PostActivity"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/Content"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="14dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/customborder2"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/type_your_post"
                android:inputType="text|textMultiLine"
                android:singleLine="true"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/button3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#00ffffff"
                    app:srcCompat="@drawable/ic_add_a_photo_white_24dp" />

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="150dp"
                    android:layout_weight="1"
                    android:background="#00ffffff"
                    app:srcCompat="@drawable/ic_photo_white_24dp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="#00ffffff"
                android:scaleType="centerInside"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_add_white_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="        " />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/advertising"
                    app:layout_constraintBottom_toTopOf="@+id/Tb1"
                    app:layout_constraintStart_toStartOf="@+id/Tb1"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="            " />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/customborder2"
                    android:text="@string/post"
                    app:layout_constraintEnd_toEndOf="@+id/Tb1"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="        " />
            </LinearLayout>

            <TableLayout
                android:id="@+id/Tb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/Tb2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3"
                tools:ignore="MissingConstraints">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="30dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/age_from"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/customborder2"
                        android:ems="10"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="47dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/to"
                        android:textSize="18sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        tools:layout_editor_absoluteY="249dp" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:background="@drawable/customborder2"
                        android:ems="10"
                        android:inputType="number" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/target_type"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/children" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/Tb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/product_type"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="45dp"
                        android:background="@drawable/customborder2"
                        tools:layout_editor_absoluteX="155dp"
                        tools:layout_editor_absoluteY="310dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/price"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editText11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:background="@drawable/customborder2"
                        android:ems="10"
                        android:hint="@string/price_in_egyptian_pound"
                        android:inputType="number|numberDecimal"
                        android:textSize="14sp" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>